--- a/app/assets/stylesheets/modules/_group.scss
+++ b/app/assets/stylesheets/modules/_group.scss
@@ -1,6 +1,8 @@
 .chat-group-form {
+  position: relative;
+  top: 60px;
   width: 980px;
-  margin: 60px auto;
+  margin: 0 auto;
   padding: 40px;
   background-color: #fff;
   border: 1px solid #ddd;
