--- a/app/assets/stylesheets/modules/_chat-menu.scss
+++ b/app/assets/stylesheets/modules/_chat-menu.scss
@@ -6,7 +6,7 @@
   width: 260px;
   float: left;
   height: 100%;
-    .chat-menu__user{
+    &__user{
       height :88px;
       padding:0 20px 27px;
       background-color: #253141;
