--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,5 +1,5 @@
 .wrapper
-  = render 'layouts/chat-menu'
+  = render 'shared/chat-menu'
   .chat-main
     .chat-main__header
       %h1
@@ -8,5 +8,5 @@
         Member :
         - @users.each do |user|
           = user.name
-      = button_to 'Edit', "/groups/#{@group.id}/edit", class: 'edit-btn', method: :get
-    = render 'layouts/chat-main'
+      = button_to 'Edit', edit_group_path, class: 'edit-btn', method: :get
+    = render 'shared/chat-main'
