--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,5 +1,5 @@
 .wrapper
-  = render 'layouts/chat-menu'
+  = render 'shared/chat-menu'
   .chat-main
     .chat-main__header
       %h1
@@ -7,5 +7,5 @@
       %h2
         Aさん、Bさん
       %input.edit-btn{ type: :submit, value: "Edit" }
-    = render 'layouts/chat-main'
+    = render 'shared/chat-main'
 
