--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,9 +3,10 @@
   .chat-main
     .chat-main__header
       %h1
-        aaa
+        = @group.name
       %h2
-        Aさん、Bさん
-      %input.edit-btn{ type: :submit, value: "Edit" }
+        Member :
+        - @users.each do |user|
+          = user.name
+      = button_to 'Edit', "/groups/#{@group.id}/edit", class: 'edit-btn', method: :get
     = render 'shared/chat-main'
-
