--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,5 +1,3 @@
 .chat-group-form
   %h1 チャットグループ編集
-  = form_for @group, id: 'new_chat_group', class: 'new_chat_group' do |f|
-    = render "groups/add-member", f: f
-    = render 'groups/submit', f: f
+  = render "groups/make_group_body", group: @group
