--- a/app/assets/stylesheets/modules/_chat-menu.scss
+++ b/app/assets/stylesheets/modules/_chat-menu.scss
@@ -1,15 +1,15 @@
 @import "./modules/chat-body";
 .chat-menu {
+  overflow-y: auto;
+  position: fixed;
   color: #ffffff;
   width: 260px;
-  background-color: #2f3e51;
   float: left;
   height: 100%;
-    .chat-menu__user{
-      height :88px;
+    &__user{
+      height : 88px;
       padding:0 20px 27px;
       background-color: #253141;
-      position: fixed;
       width: 260px;
         h1{
           font-size: 16px;
@@ -25,14 +25,25 @@
     }
     .chat-menu__group{
       padding:0 20px 0;
-      margin-top: 124px;
-      .group-name{
-        font-size: 15px;
-        margin-bottom: 5px;
-      }
-      .group-message{
-        font-size: 11px;
-        margin-bottom: 40px;
+      background-color: #2f3e51;
+      min-height: calc(100% - 115px);
+      &__box{
+        color: #ffffff;
+        margin: 0 -20px 0;
+        padding: 0 20px 0;
+        height: 100%;
+        &:hover{
+          background-color: rgba(47, 62, 81, 0.9);
+        }
+        .group-name{
+          padding-top: 20px;
+          font-size: 15px;
+          margin-bottom: 5px;
+        }
+        .group-message{
+          font-size: 11px;
+          margin-bottom: 40px;
+        }
       }
     }
 }
