Re-mark up to display messages

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,136 +1,12 @@
-<!-- 通知欄 -->
-= render "notification"
-
-<!-- サイドメニュー -->
-.chat-menu
-  .chat-menu__user
-    %h1
-      = current_user.name
-      %span.icons
-        = link_to edit_user_registration_path do
-          %i.fa.fa-cog
-        %i.fa.fa-pencil-square-o
-  .chat-menu__group
-    %ul
-      %li
-        .group-name
-          sample_group1
-        .group-message
-          まだメッセージはありません
-      %li
-        .group-name
-          sample_group1
-        .group-message
-          まだメッセージはありません
-      %li
-        .group-name
-          sample_group1
-        .group-message
-          = current_user.id
-
-<!-- チャット欄 -->
-.chat-main
-  .chat-main__header
-    %h1
-      sampleグループ
-    %h2
-      Aさん、Bさん
-    %input.edit-btn{ type: :submit, value: "Edit" }
-  .chat-main__contents
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:30:40
-      .chat-main__contents__message
-        こんにちは
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:33:01
-      .chat-main__contents__message
-        こんにちは
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:40:10
-      .chat-main__contents__message
-        こんにちは
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:40:10
-      .chat-main__contents__message
-        こんにちは
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:40:10
-      .chat-main__contents__message
-        こんにちは
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:40:10
-      .chat-main__contents__message
-        こんにちは
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:40:10
-      .chat-main__contents__message
-        こんにちは
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:40:10
-      .chat-main__contents__message
-        こんにちは
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:40:10
-      .chat-main__contents__message
-        こんにちは
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:40:10
-      .chat-main__contents__message
-        こんにちは
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:40:10
-      .chat-main__contents__message
-        こんにちは
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:40:10
-      .chat-main__contents__message
-        こんにちは
-    .message
-      .chat-main__contents__name
-        yukinoguchi
-      .chat-main__contents__time
-        2017年4月27日 06:40:10
-      .chat-main__contents__message
-        こんにちは
-  .chat-main__inputarea
-    %form
-      .textarea
-        %input.text{ type: :text }
-        %input.img-btn{ type: :submit, value: "&#xf03e;".html_safe }
-      %input.send-btn{ type: :submit, value: "Send" }
+.wrapper
+  = render 'shared/chat-menu'
+  .chat-main
+    .chat-main__header
+      %h1
+        = @last_group.name
+      %h2
+        Member :
+        - @users.each do |user|
+          = user.name
+      = button_to 'Edit', "/groups/#{@group.id}/edit", class: 'edit-btn', method: :get
+    = render 'shared/chat-main'
