Set messages/index to display messages

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,7 +3,7 @@
   .chat-main
     .chat-main__header
       %h1
-        = @last_group.name
+        = @group.name
       %h2
         Member :
         - @users.each do |user|
