--- a/app/views/shared/_chat-main.html.haml
+++ b/app/views/shared/_chat-main.html.haml
@@ -4,7 +4,7 @@
       .chat-main__contents__name
         = message.user.name
       .chat-main__contents__time
-        = message.created_at
+        = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
       .chat-main__contents__message
         = message.body
 .chat-main__inputarea
