Display latest message on menu

--- a/app/views/shared/_chat-menu__group.html.haml
+++ b/app/views/shared/_chat-menu__group.html.haml
@@ -3,4 +3,7 @@
     .group-name
       = group.name
     .group-message
-      まだ投稿はありません
+      - if group.messages.present?
+        = group.messages.last.body
+      - else
+        投稿がありません
