Replace 'each' to 'render'

--- a/app/views/shared/_chat-main.html.haml
+++ b/app/views/shared/_chat-main.html.haml
@@ -4,18 +4,11 @@
       = @group.name
     %h2
       Member :
-      - @group.users.each do |user|
-        = user.name
+      = render partial: "shared/group_user", collection: @group.users
     = button_to 'Edit', edit_group_path(@group), class: 'edit-btn', method: :get
   .chat-main__contents
     .message
-      - @group.messages.each do |message|
-        .chat-main__contents__name
-          = message.user.name
-        .chat-main__contents__time
-          = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-        .chat-main__contents__message
-          = message.body
+      = render partial: "shared/group_message", collection: @group.messages, as: :message
   .chat-main__inputarea
     .textarea
       = form_for [@group, @message] do |f|
