Add data to group-message class

--- a/app/views/shared/_group.html.haml
+++ b/app/views/shared/_group.html.haml
@@ -2,5 +2,5 @@
   .chat-menu__group__box
     .group-name
       = group.name
-    .group-message
+    %div{ class: 'group-message', 'data-group-id': group.id }
       = group.try
