--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -9,9 +9,20 @@
       = f.label :chat_group, "チャットメンバーを追加", class: 'chat-group-form__label'
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
-        #user-search-field.chat-group-form__input
-          = f.collection_check_boxes(:user_ids, User.all, :id, :name)
-      #user-search-result
+        #user-search-field
+          = text_field_tag :keyword, "", placeholder: "追加したいユーザー名を入力してください", class: 'chat-group-form__input'
+        %ul#user-search-result
+          %li.chat-group-user.clearfix
+            %p.chat-group-user__name
+              .chat-group-user__btn.chat-group-user__btn--add
+  .chat-group-form__field.clearfix
+    .chat-group-form__field--left
+      = f.label :chat_group, 'チャットメンバー', class: 'chat-group-form__label'
+    .chat-group-form__field--right
+      #chat-group-users
+        #chat-group-user-22.chat-group-user.clearfix
+          = f.hidden_field "chat_group[user_ids][]", value: 22
+          %p.chat-group-user__name aaa
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
