--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -12,17 +12,15 @@
         #user-search-field
           = text_field_tag :keyword, "", placeholder: "追加したいユーザー名を入力してください", class: 'chat-group-form__input'
         %ul#user-search-result
-          %li.chat-group-user.clearfix
-            %p.chat-group-user__name
-              .chat-group-user__btn.chat-group-user__btn--add
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
       = f.label :chat_group, 'チャットメンバー', class: 'chat-group-form__label'
     .chat-group-form__field--right
       #chat-group-users
-        #chat-group-user-22.chat-group-user.clearfix
-          = f.hidden_field "chat_group[user_ids][]", value: 22
-          %p.chat-group-user__name aaa
+        .chat-group-user.clearfix
+          = hidden_field_tag "group[user_ids][]", current_user.id
+          %p.chat-group-user__name
+            = current_user.name
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
