--- a/app/views/shared/_group_message.html.haml
+++ b/app/views/shared/_group_message.html.haml
@@ -4,3 +4,5 @@
   = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
 .chat-main__contents__message
   = message.body
+.chat-main__contents__image
+  = image_tag message.image.thumb.url if message.image.present?
