--- a/app/assets/stylesheets/modules/_chat-main.scss
+++ b/app/assets/stylesheets/modules/_chat-main.scss
@@ -54,6 +54,8 @@
         clear: both;
         font-size: 14px;
         color: #434A54;
+      }
+      .chat-main__contents__image{
         margin-bottom: 40px;
       }
     }
