--- a/app/views/shared/_group_message.html.haml
+++ b/app/views/shared/_group_message.html.haml
@@ -1,8 +1,9 @@
-.chat-main__contents__name
-  = message.user.name
-.chat-main__contents__time
-  = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-.chat-main__contents__message
-  = message.body
-.chat-main__contents__image
-  = image_tag message.image.thumb.url if message.image.url
+%li.message{data:{id: message.id}}
+  .chat-main__contents__name
+    = message.user.name
+  .chat-main__contents__time
+    = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+  .chat-main__contents__message
+    = message.body
+  .chat-main__contents__image
+    = image_tag message.image.thumb.url if message.image.url
